<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sortMenuItem"
        android:icon="@drawable/twotone_sort_white_18dp"
        android:title="@string/sortmenuitem"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_new"
                android:title="@string/newcases"
                app:showAsAction="always" />
            <item
                android:id="@+id/sort_total"
                android:title="@string/item"
                android:visible="true" />
        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>
